--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
     "@angular/core": "~9.1.9",
-    "@angular/forms": "~9.1.9",
+    "@angular/forms": "^9.1.11",
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "angular-google-charts": "^1.1.4",
     "axios": "^0.19.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
